app/assets/stylesheets/properties.scss
.carrousel {
  margin: auto;
}

// Collapse Property

#module {
  width: 800px;
}

#module a.collapsed:after {
  content: "+ Show More";
}

#module a:not(.collapsed):after {
  content: "- Show Less";
}

#module #collapseExample.collapse:not(.show) {
  display: block;
  /* height = lineheight * no of lines to display */
  height: 4.5em;
  overflow: hidden;
}

#module #collapseExample.collapsing {
  height: 4.5em;
}

.collapse {
  width: 800px;
}

.property-latest-img {
  width: 100%;
  height: 220px;
  background-size: cover;
}

.link-latest {
  width: 100%;
  height: 100%;
  display: block;
}

